made shadows flat to keep consistent style

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       transform: translate(-50%, -50%);
       border-radius: 50% 50% 50% 50% / 10% 10% 10% 10%;
       background-color: yellow;
-      box-shadow: 0px 0.5vmin 0.5vmin -0.2vmin #808080ad, inset 0px -0.5vmin 0.6vmin #61521c70; 
+      box-shadow: 0px 0.5vmin 0 -0.2vmin #808080ad, inset 0px -0.6vmin 0 #61521c70; 
       
     
   	}
