--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@
 
 
 <div class="frame">
-	<div class="cafe" id="cafeLeft"></div>
-  <div class="cafe" id="cafeRight"></div>
+	<div class="cafe" id="cafeLeft">
+    <p>CAFEˊ<br>BUSTELO</p>
+  </div>
+  <div class="cafe" id="cafeRight">
+  <p>CAFEˊ<br>BUSTELO</p>
+  </div>
   <div class="cup" id="cupTop"></div>
   <div class="cup" id="cupBottom"></div>
   <div id="mokaPot"></div>
