--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     border: 1px solid black;
   }
   
+  @font-face {
+    font-family: "Peignot";
+    src: url("peignotbold.ttf") format("truetype");
+  }
+
   .cafe {
     position: absolute;
     width: 27%;
@@ -51,16 +56,26 @@
     top: 40%;
   }
   
+  .cafeLogo {
+  	position: absolute;
+    color: navy;
+    font-family: Peignot;
+    top: -7%;
+    left: 31%;
+    font-size: 5vmin;
+    shape-outside: circle(100%);
+  }
+  
 
 </style>
 
 
 <div class="frame">
 	<div class="cafe" id="cafeLeft">
-    <p>CAFEˊ<br>BUSTELO</p>
+    <p class="cafeLogo">CAFEˊ<br>BUSTE</p>
   </div>
   <div class="cafe" id="cafeRight">
-  <p>CAFEˊ<br>BUSTELO</p>
+  <p class="cafeLogo">CAFEˊ<br>BUSTE</p>
   </div>
   <div class="cup" id="cupTop"></div>
   <div class="cup" id="cupBottom"></div>
