--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	
   .frame {
     position: relative;
-    width: 500px;
-    height: 500px;
+    width: 80vmin;
+    height: 80vmin;
     border: 1px solid black;
   }
 
@@ -21,5 +21,20 @@
 
 
 <div class="frame">
-	<!-- ur HTML code goes here -->  
+
+  <div class="busteloTin"></div>
+  
+  
+  
+  
+  <div class="prCup"></div>
+  
+  
+  
+  
+  <div class="mokaPot"></div>
+  
+  
+  
+  
 </div>
