--- a/index.html
+++ b/index.html
@@ -12,9 +12,38 @@
 	
   .frame {
     position: relative;
+    aspect-ratio: 12 / 9;
     width: 80vmin;
-    height: 80vmin;
+    height: auto;
     border: 1px solid black;
+  }
+  
+  .busteloTin {
+    border: 1px solid black;
+    width: 30%;
+    height: 50%;
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    border-radius: 0% 0% 50% 50% / 10% 10% 10% 10%;
+    overflow: hidden
+  }
+  
+  .bodyY {
+    position: absolute;
+    z-index: 1;
+    background-color: yellow;
+    height: 70%;
+    width: 100%;
+    border-radius: 0% 0% 50% 50% / 10% 10% 10% 10%;
+  }
+  .bodyR {
+    position: absolute;
+    z-index: -1;
+    background-color: red;
+    width: 100%;
+    height: 40%;
+    top: 60%;
   }
 
 </style>
@@ -22,7 +51,11 @@
 
 <div class="frame">
 
-  <div class="busteloTin"></div>
+  <div class="busteloTin">
+    <div class="bodyY"></div>
+    <div class="bodyR"></div>
+    <div class="lid"></div>
+  </div>
   
   
   
