finished the moka pot

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+<head>
 <style>
   
   * { box-sizing: border-box; }
@@ -16,58 +18,175 @@
     width: 80vmin;
     height: auto;
     border: 1px solid black;
+    overflow: hidden;
+  }
+
+  #reference {
+    width: 100%;
+    z-index: -100;
+  }
+
+  .moka {
+    z-index: 5;
+  }
+
+  #handle {
+    position: absolute;
+    width: 15%;
+    height: 40.4%;
+    background-color: rgb(0, 0, 0);
+    top: 16.2%;
+    left: 0.4%;
+    clip-path: polygon(92% 0%, 100% 23%, 65% 28%, 50% 40%, 56% 54%, 49% 65%, 56% 75%, 54% 86%, 66% 98%, 11% 100%, 0% 75%, 0% 60%, 12% 30%, 40% 10%, 68% 2%);
   }
   
-  .busteloTin {
-    border: 1px solid black;
-    width: 30%;
-    height: 50%;
+  #lid {
     position: absolute;
-    left: 50%;
-    top: 30%;
-    border-radius: 0% 0% 50% 50% / 10% 10% 10% 10%;
-    overflow: hidden
+    width: 44%;
+    height: 14.4%;
+    background-color: #D66324;
+    top: 11.1%;
+    left: 14.1%;
+    clip-path: polygon(14% 51%, 16% 100%, 3% 99%, 0% 27%, 12% 31%, 12% 33%, 19% 33%, 32% 13%, 48% 0%, 60% 0%, 75% 12%, 92% 42%, 92% 45%, 100% 54%, 100% 58%, 92% 58%, 92% 50%, 76% 43%, 48% 40%, 26% 44%);
   }
-  
-  .bodyY {
+
+  #lidHandle {
     position: absolute;
-    z-index: 1;
-    background-color: yellow;
-    height: 70%;
-    width: 100%;
-    border-radius: 0% 0% 50% 50% / 10% 10% 10% 10%;
+    width: 6.77%;
+    height: 8.9%;
+    background-color: rgb(0, 0, 0);
+    top: 2.2%;
+    left: 34.42%;
+    border-radius: 50% 50% 25% 25% / 15% 15% 75% 75% ;
   }
-  .bodyR {
+
+  #panel1 {
     position: absolute;
-    z-index: -1;
-    background-color: red;
-    width: 100%;
-    height: 40%;
-    top: 60%;
+    width: 7.7%;
+    height: 36.3%;
+    background-color: #AA4807;
+    top: 17.6%;
+    left: 20.2%;
+    clip-path: polygon(0% 2.5%, 65% 0%, 100% 100%, 70% 100%, 49% 95%);
+  }
+
+  #panel2 {
+    position: absolute;
+    width: 11%;
+    height: 37%;
+    background-color: #C35113;
+    top: 17%;
+    left: 25.3%;
+    clip-path: polygon(0% 1.5%, 100% 0%, 100% 100%, 25% 100%);
+  }
+
+  #panel3 {
+    position: absolute;
+    width: 11%;
+    height: 37%;
+    background-color: #C14D02;
+    top: 17%;
+    left: 36.5%;
+    clip-path: polygon(0% 0%, 100% 1.5%, 90% 100%, 0% 100%);
+  }
+
+  #panel4 {
+    position: absolute;
+    width: 8.1%;
+    height: 36.8%;
+    background-color: #C05811;
+    top: 17.2%;
+    left: 46.5%;
+    clip-path: polygon(10% 0%, 100% 3%, 70% 95%, 55% 99%, 0% 100%);
+  }
+
+  #spout {
+    position: absolute;
+    width: 7.4%;
+    height: 14.7%;
+    background-color: #B75120;
+    top: 19.5%;
+    left: 53.5%;
+    clip-path: polygon(13% 0%, 64% 0.5%, 100% 12%, 79% 20%, 0% 100%);
+  }
+
+  #baseOrange {
+    position: absolute;
+    width: 26%;
+    height: 8.4%;
+    background-color: #B34804;
+    top: 53.8%;
+    left: 25.4%;
+    border-radius: 0% 0% 50% 50% / 50% 50% 15% 15%;
+  }
+
+  #baseMetal {
+    position: absolute;
+    width: 33.7%;
+    height: 36%;
+    background: linear-gradient(90deg, rgba(153,153,153,1) 19%, rgba(237,237,237,1) 35%, rgba(152,150,150,1) 53%);    
+    top: 61.3%;
+    left: 22%;
+    border-radius: 15% 15% 50% 50% / 90% 90% 10% 10% ;
+  }
+
+  .cups {
+    z-index: 4;
+  }
+
+  .cupBody {
+    position: absolute;
+    width: 16.3%;
+    height: 19.7%;
+    /*background-color: rgba(255, 255, 255, 0.5);*/
+    border-radius: 50% 50% 50% 50% / 5% 5% 10% 10%;
+  }
+
+  #cupBodyfrontTop {
+    top: 52%;
+    left: 72.6%;
+  }
+
+  #cupBodyfrontBottom {
+    height: 20.6%;
+    top: 70%;
+    left: 72.6%;
+    z-index: 3;
   }
 
 </style>
+</head>
+<body>
+  
 
 
 <div class="frame">
 
-  <div class="busteloTin">
-    <div class="bodyY"></div>
-    <div class="bodyR"></div>
-    <div class="lid"></div>
+  
+  <div class="moka">
+    <div id="handle"></div>
+    <div id="lid"></div>
+    <div id="lidHandle"></div>
+    <div id="panel1"></div>
+    <div id="panel2"></div>
+    <div id="panel3"></div>
+    <div id="panel4"></div>
+    <div id="spout"></div>
+    <div id="baseOrange"></div>
+    <div id="baseMetal"></div>
   </div>
-  
-  
-  
-  
-  <div class="prCup"></div>
-  
-  
-  
-  
-  <div class="mokaPot"></div>
-  
-  
+  <div class="cups">
+    <div class="back"></div>
+    <div class="frontTop">
+      <div class="cupBody" id="cupBodyfrontTop"></div>
+    </div>
+    <div class="frontBottom">
+      <div class="cupBody" id="cupBodyfrontBottom"></div>
+    </div>
+  </div>
+ <!-- <img id="reference" src="still-life.jpg" alt=""> -->
+
   
   
 </div>
+</body>
