--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   }
 
   .moka {
-    z-index: 5;
+    z-index: 10;
   }
 
   #handle {
@@ -42,6 +42,7 @@
   
   #lid {
     position: absolute;
+    z-index: 4;
     width: 44%;
     height: 14.4%;
     background-color: #D66324;
@@ -82,6 +83,7 @@
 
   #panel3 {
     position: absolute;
+    z-index: 4;
     width: 11%;
     height: 37%;
     background-color: #C14D02;
@@ -92,6 +94,7 @@
 
   #panel4 {
     position: absolute;
+    z-index: 4;
     width: 8.1%;
     height: 36.8%;
     background-color: #C05811;
@@ -102,6 +105,7 @@
 
   #spout {
     position: absolute;
+    z-index: 4;
     width: 7.4%;
     height: 14.7%;
     background-color: #B75120;
@@ -130,15 +134,12 @@
     border-radius: 15% 15% 50% 50% / 90% 90% 10% 10% ;
   }
 
-  .cups {
-    z-index: 4;
-  }
-
   .cupBody {
     position: absolute;
+    z-index: 0;
     width: 16.3%;
     height: 19.7%;
-    /*background-color: rgba(255, 255, 255, 0.5);*/
+    background-color: #A8AA9C;
     border-radius: 50% 50% 50% 50% / 5% 5% 10% 10%;
   }
 
@@ -151,7 +152,214 @@
     height: 20.6%;
     top: 70%;
     left: 72.6%;
-    z-index: 3;
+  }
+
+  .stripe {
+    position: absolute;
+    z-index: 1;
+    width: 12.5%;
+    height: 4.3%;
+    background-color: #192347;
+    border-radius: 50% 50% 80% 20% / 0% 0% 20% 0%;
+  }
+
+  #stripeTopfrontTop {
+    top: 54%;
+    left: 76.2%;
+  }
+
+  #stripeCenterfrontTop {
+    top: 60.5%;
+    left: 76.3%;
+  }
+
+  #stripeBottomfrontTop {
+    top: 67%;
+    left: 76.4%;
+  }
+
+  #stripeTopfrontBottom {
+    top: 72.5%;
+    left: 76.7%;
+  }
+
+  #stripeCenterfrontBottom {
+    top: 79%;
+    left: 76.8%;
+  }
+
+  #stripeBottomfrontBottom {
+    top: 85%;
+    left: 76.9%;
+  }
+
+  .triangle {
+    position: absolute;
+    z-index: 2;
+    width: 10%;
+    height: 16.7%;
+    background-color: #882415;
+    clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  }
+
+  #trianglefrontTop {
+    top: 54%;
+    left: 76.2%;
+  }
+
+  #trianglefrontBottom {
+    top: 72.5%;
+    left: 76.8%;
+  }
+
+  .star {
+    position: absolute;
+    z-index: 2;
+    width: 3.8%;
+    height: 5%;
+    background-color: #A5A599;
+    clip-path: polygon(50% 0%, 60% 40%, 100% 40%, 70% 60%, 80% 100%, 50% 70%, 20% 100%, 30% 60%, 0% 40%, 40% 40%);
+  }
+
+  #starfrontTop {
+    top: 60%;
+    left: 77.7%;
+  }
+
+  #starfrontBottom {
+    top: 78.5%;
+    left: 78.6%;
+  }
+
+  .handle {
+    position: absolute;
+    width: 5.5%;
+    height: 13.7%;
+    background-color: #C8C9B7;
+    clip-path: polygon(0% 40%, 30% 5%, 55% 0%, 100% 5%, 100% 10%, 80% 30%, 60% 20%, 40% 40%, 40% 70%, 50% 80%, 90% 70%, 100% 75%, 100% 80%, 70% 100%, 40% 100%, 0% 70%);
+  }
+
+  #handlefrontTop {
+    top: 56%;
+    left: 70%;
+  }
+  
+  #handlefrontBottom {
+    top: 75%;
+    left: 70.5%;
+  }
+
+  .cupBase {
+    position: absolute;
+    width: 13.7%;
+    height: 3.5%;
+    background-color: #7B7E6B;
+    border-radius: 50% 50% 50% 50% / 0% 0% 40% 40%;
+  }
+
+  #cupBasefrontBottom {
+    top: 90%;
+    left: 74%;
+  }
+
+  #inside {
+    position: absolute;
+    width: 14.5%;
+    height: 1%;
+    top: 52.2%;
+    left: 73.5%;
+    background-color: #848678;
+    border-radius: 50% 50% 50% 50% / 50% 50% 50% 50%;
+  }
+
+  #cupBodyback {
+    z-index: 2;
+    left: 45%;
+    top: 15%;
+  }
+
+  #stripeTopback {
+    z-index: 2;
+    left: 49%;
+    top: 17%
+  }
+
+  #stripeCenterback {
+    z-index: 2;
+    left: 49%;
+    top: 23.5%;
+  }
+
+  #stripeBottomback {
+    z-index: 2;
+    left: 49%;
+    top: 30%;
+  }
+
+  #handleback {
+    z-index: 1;
+    transform: rotateY(180deg);
+    left: 58%;
+    top: 20%;
+  }
+
+  #cupBaseback {
+    left: 47%;
+    top: 33%;
+  }
+
+  .cafeBodyYellow {
+    position: absolute;
+    width: 30%;
+    height: 37%;
+    background-color: #C4BD0D;
+    border-radius: 10% 10% 50% 50% / 0% 0% 10% 10%;
+  }
+
+  #bodyYellowLeft {
+    left: 38.2%;
+    top: 38%;
+  }
+
+  #bodyYellowRight {
+    left: 69%;
+    top: 37%;
+  }
+
+  .cafeBodyRed {
+    position: absolute;
+    width: 30%;
+    height: 20%;
+    background-color: #9C2A29;
+    border-radius: 10% 10% 50% 50% / 0% 0% 15% 15%;
+  }
+
+  #bodyRedLeft {
+    left: 38.2%;
+    top: 70%;
+  }
+
+  #bodyRedRight {
+    left: 69%;
+    top: 69%;
+  }
+  
+  .cafeLid {
+    position: absolute;
+    width: 31%;
+    height: 3%;
+    background-color: #ACA21F;
+    border-radius: 10% 10% 10% 10% / 10% 10% 10% 10%;
+  }
+
+  #lidRight {
+    top: 36%;
+    left: 68.5%;
+  }
+
+  #lidLeft {
+    top: 36%;
+    left: 37.5%;
   }
 
 </style>
@@ -162,29 +370,63 @@
 
 <div class="frame">
 
-  
-  <div class="moka">
-    <div id="handle"></div>
-    <div id="lid"></div>
-    <div id="lidHandle"></div>
-    <div id="panel1"></div>
-    <div id="panel2"></div>
-    <div id="panel3"></div>
-    <div id="panel4"></div>
-    <div id="spout"></div>
-    <div id="baseOrange"></div>
-    <div id="baseMetal"></div>
+  <div class="cafeContainers">
+    <div class="leftContainer"></div>
+      <div class="cafeBodyRed" id="bodyRedLeft"></div>
+      <div class="cafeBodyYellow" id="bodyYellowLeft"></div>
+      <div class="cafeLid" id="lidLeft"></div>
+    <div class="rightContainer">
+      <div class="cafeBodyRed" id="bodyRedRight"></div>
+      <div class="cafeBodyYellow" id="bodyYellowRight"></div>
+      <div class="cafeLid" id="lidRight"></div>
+    </div>
   </div>
+  
+
   <div class="cups">
-    <div class="back"></div>
+    <div class="back">
+      <div class="cupBody" id="cupBodyback"></div>
+      <div class="stripe" id="stripeTopback"></div>
+      <div class="stripe" id="stripeCenterback"></div>
+      <div class="stripe" id="stripeBottomback"></div>
+      <div class="handle" id="handleback"></div>
+      <div class="cupBase" id="cupBaseback"></div>
+    </div>
     <div class="frontTop">
       <div class="cupBody" id="cupBodyfrontTop"></div>
+      <div class="stripe" id="stripeTopfrontTop"></div>
+      <div class="stripe" id="stripeCenterfrontTop"></div>
+      <div class="stripe" id="stripeBottomfrontTop"></div>
+      <div class="triangle" id="trianglefrontTop"></div>
+      <div class="star" id="starfrontTop"></div>
+      <div class="handle" id="handlefrontTop"></div>
+      <div id="inside"></div>
     </div>
     <div class="frontBottom">
       <div class="cupBody" id="cupBodyfrontBottom"></div>
+      <div class="stripe" id="stripeTopfrontBottom"></div>
+      <div class="stripe" id="stripeCenterfrontBottom"></div>
+      <div class="stripe" id="stripeBottomfrontBottom"></div>
+      <div class="triangle" id="trianglefrontBottom"></div>
+      <div class="star" id="starfrontBottom"></div>
+      <div class="handle" id="handlefrontBottom"></div>
+      <div class="cupBase" id="cupBasefrontBottom"></div>
+    </div>
+
+    <div class="moka">
+      <div id="handle"></div>
+      <div id="lid"></div>
+      <div id="lidHandle"></div>
+      <div id="panel1"></div>
+      <div id="panel2"></div>
+      <div id="panel3"></div>
+      <div id="panel4"></div>
+      <div id="spout"></div>
+      <div id="baseOrange"></div>
+      <div id="baseMetal"></div>
     </div>
   </div>
- <!-- <img id="reference" src="still-life.jpg" alt=""> -->
+ <!---<img id="reference" src="still-life.jpg" alt="">--->
 
   
   
